src/test/resources/failing/fail39.pnd
template Foo<X>{}
template Bar{}
Bar as B
Foo<B2> as F